# layoffs

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml  deploy-vps.yml
community/: admin.py  models.py
community/migrations/: 0001_initial.py
demo/: index.html
docs/: 01-project-scaffolding.md  02-data-models.md  03-celery-infrastructure.md  04-data-collection.md  05-views-and-api.md  06-frontend-templates.md  07-deployment.md
layoffs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
layoffs/fixtures/: layoffs_2026_04.json
layoffs/migrations/: 0001_initial.py  0002_layoffevent_slug.py  0003_backfill_slugs.py  0004_alter_layoffevent_slug.py
layoffs/static/css/: style.css
layoffs/static/js/: charts.js  theme.js
layoffs/templates/: base.html  dashboard.html  home.html  layoff_detail.html
layoffs/templates/components/: community_sidebar.html  news_cards.html  recent_table.html  stats_panel.html
layoffs_tracker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
news/: admin.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
nginx/: default.conf
scraper/: admin.py  models.py  pipeline.py  tasks.py
scraper/collectors/: llm_collector.py  news_collector.py  web_scraper.py
scraper/management/commands/: seed_datasources.py
scraper/migrations/: 0001_initial.py  0002_scrapedarticle_url.py
